docs/tabs.css
/* Style the tab */
.tabbar {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
}

/* Style the buttons that are used to open the tab content */
.tabbar button {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
}

/* Change background color of buttons on hover */
.tabbar button:hover {
    background-color: #ddd;
}

/* Create an active/current tablink class */
.tabbar button.active {
    background-color: #ccc;
}

/* Style the tab content */
.tab {
    display: none;
    padding: 6px 12px;
    border: 1px solid #ccc;
    border-top: none;
}

